ajustes para prueba de hpa
